整理terrain block的代码

--- a/关于地形实现的考虑.md
+++ b/关于地形实现的考虑.md
@@ -23,6 +23,49 @@ sample2d MaskTexture2
 vec4 uniform TextureTLBR[总贴图数量]
 in ivec4 Layer1-4TexIndex
 in ivec4 Layer5-8TexIndex
-
-
 ```
+
+## covering layer
+- 可以指定自身所属的layer。
+- 烘焙时将会从maskbuffer获取自身layer之上的其他layer的mask遮盖自己。  
+- 当当前block的mask buffer更新时自身也应该更新。  
+- 也就是说当mask 更新时**blend烘焙**与**所有的covering layer**都必须更新
+- **covering layer**烘焙结果将覆盖自身layer的terrain blend结果
+### - 绘制流程
+- 一个block的所有covering layer**共用一个framebuffer**。从顶层到底层进行依次绘制。顶层结果直接遮盖下一层的烘焙结果，通过开启深度检测实现。
+- 最顶层开始取mask时，高于自身图层的mask应被记录以节省下一层读取的开销。这里可以考虑保留透明的颜色但是仍然更新深度。越高层的z坐标小，也就是距离屏幕越近。
+- 两个rendertarget：颜色target，法线target
+- 开启深度检测。
+- 那么最终烘焙完毕的结果就是可以直接铺在blend烘焙结果之上的贴图。
+
+# 总体流程
+- **mask烘焙** => **blend烘焙** + **所有coverlayer烘焙** => **合成烘焙blend+cover结果** => **final阶段实时渲染**
+- **final阶段** 每帧更新
+
+## 1. Mask 烘焙阶段
+- 输入 `screen平面mesh` 或者 输入 `画刷顶点组`
+- 一个专属`framebuffer`: 3个 `render target` 输出 `mask123，mask456，mask789`
+
+## 2A. Blend 烘焙阶段
+- 输入 **Mask pass**的输出结果 `mask123, mask456, mask789`
+- 输入 `Tiles` 的 `TilesColor`与`TilesNormal` 两个 `TextureArray`。从MapTextureCache获取。每个地图都可单独指定素材。
+- 输入`地形mesh`
+- 一个专属`framebuffer`: 2个 `render target` 输出混合结果 `BlendColor, BlendNormal`
+
+## 2B. Covering 烘焙阶段
+- 输入 **Mask pass**的输出结果 `mask123, mask456, mask789`
+- 输入 `covering object mesh` 例如道路，地砖，地面标识等
+- 一个专属`framebuffer`: 2个 `render target` 输出混合结果 `CoveringColor, CoveringNormal`
+
+## 3. Composite 烘焙结果合成阶段
+- 输入 **Blend pass** 和 **Covering pass** 的输出结果
+- 将**Covering**叠加至**Blend**结果之上
+- 一个专属`framebuffer`: 2个 `render target` 输出混合结果 `CompositedColor, CompositedNormal`
+
+## 4. Final 实时光照渲染阶段
+- 输入 **Composite pass** 的输出结果
+- 输入 **Mask pass** 的输出结果 **mask123** 用于取得水面区域
+- 输入水体渲染所需的贴图
+- 根据水面区域mask渲染水体效果
+- 输出最终渲染效果
+- 一个专属`framebuffer`: 1个 `render target` 输出最终结果 `FragColor`
